# dfds

./: README.md  __main__.py  cli.py  config.yaml  convert.py  dfds.py  ip.py  passwords.py  ports.py  pyproject.toml  uninstall_dfds.bat  utils.py  wifi.py
dfds/: cli.py  config.py  config_loader.py  convert.py  crypto.py  ip.py  logger_setup.py  passwords.py  ports.py  sysinfo.py  timer.py  usb_detector.py  utils.py  weather.py  wifi.py
dfds/lock/: __init__.py  lock_screen.py  usb_lock_screen_pyqt.py  usbkey.py
